Replace uses of the deprecated Class.newInstance method with Constructor.newInstance.